--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7be3c5">  <td>19/06/09 14:13:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddEmployeePageTest.addEmployee()[pri:0, instance:com.syntax.testcases.AddEmployeePageTest@475530b9]">addEmployee</td> 
-  <td>main@1454127753</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/06/09 14:13:50</td>   <td>-4791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpDriver()[pri:0, instance:com.syntax.testcases.AddEmployeePageTest@475530b9]">&gt;&gt;setUpDriver</td> 
-<td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/06/09 14:14:10</td>   <td>15124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.syntax.testcases.AddEmployeePageTest@475530b9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1454127753</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/06/15 13:47:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelFunctionsTest.excelTest()[pri:0, instance:com.syntax.practice.ExcelFunctionsTest@18be83e4]">excelTest</td> 
+  <td>main@507084503</td>   <td></td> </tr>
 </table>
